Bug 488893 - With non-Intel graphics, floating panel leads to graphical glitches caused by maximize effect
Summary: With non-Intel graphics, floating panel leads to graphical glitches caused by...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 492873 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-06-21 13:55 UTC by Max
Modified: 2024-09-27 14:31 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
Screen recording of the bug (1.52 MB, video/webm)
2024-06-21 13:55 UTC, Max
Details
No glitches without manually maximizing first window (777.15 KB, video/webm)
2024-06-21 13:56 UTC, Max
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Max 2024-06-21 13:55:21 UTC
Created attachment 170750 [details]
Screen recording of the bug

SUMMARY
Since Plasma 6.1.0, maximizing or shrinking a window leads to graphical glitches of the window below it under specific circumstances. This issue only occurs if there is a floating panel. See attached screen recording.

STEPS TO REPRODUCE
1. Enable floating panel
2. Start any application
3. Shrink window if maximized
4. Maximize window
5. Start another application
6. Glitches occur when the second window is maximized or shrunk

OBSERVED RESULT
graphical glitches

EXPECTED RESULT
no graphical glitches

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1
Kernel Version: 6.6.34-1-lts (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 7,2 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: VivoBook_ASUSLaptop TP420IA_TM420IA
System Version: 1.0

ADDITIONAL INFORMATION
Occurs since Plasma 6.1.0. Tested on a new user profile.
Comment 1 Max 2024-06-21 13:56:56 UTC
Created attachment 170751 [details]
No glitches without manually maximizing first window

When the first window is not maximized manually, the issue does not occur. It also does not occur if it is manually maximized, but floating panel is disabled.
Comment 2 Nate Graham 2024-06-21 21:03:37 UTC
Thanks for the screen recording. However I cannot reproduce the issue when I follow those steps.
Comment 3 heroshiheroart 2024-06-21 23:10:31 UTC
Had the same issue, seems to be related with the "Maximize Animation" at Window Management > Desktop Effects, after disable it, the issue doesn't happen.

SOFTWARE/OS VERSIONS
Operating System: Bazzite 40
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1
Kernel Version: 6.9.4-201.fsync.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-7400 CPU @ 3.00GHz
Memory: 15.6 GiB of RAM
Graphics Processor: AMD Radeon RX 570 Series
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B250M-D3H
Comment 4 Max 2024-06-22 11:23:47 UTC
I can confirm that disabling the "Maximize" animation fixes the issue. Moreover, I could reproduce the bug on the latest KDE neon Developer Edition on two different computers. A laptop:

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.0
Kernel Version: 6.5.0-35-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 7.2 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: VivoBook_ASUSLaptop TP420IA_TM420IA
System Version: 1.0


And a PC:

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.0
Kernel Version: 6.5.0-35-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-2300 CPU @ 2.80GHz
Memory: 7.7 GiB of RAM
Graphics Processor: NV137
Manufacturer: MEDIONPC
Product Name: MS-7707
System Version: 1.1
Comment 5 chriserizo 2024-06-22 17:24:17 UTC
Can reproduce this issue on my NVIDIA laptop.
Comment 6 nodscher 2024-09-14 18:52:05 UTC
changing "let couldRetarget = false;" to "let couldRetarget = true;" in /usr/share/kwin/effects/maximize/contents/code/main.js and reloading the effect fixes the issue for me.
I don't know what that does though, so the original setting could be doing something else which breaks now. I haven't encountered any problems with this setting yet though.
Comment 7 nodscher 2024-09-14 20:17:36 UTC
Maybe this is related to the crossfade effect which "let couldRetarget = true" disables as far as I can tell. Morphing Popups also doesn't seem to crossfade for me.
(Maybe connected to https://bugs.kde.org/show_bug.cgi?id=439689 ?)


Operating System: Arch Linux 
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2
Comment 8 Nate Graham 2024-09-17 13:43:41 UTC
*** Bug 492873 has been marked as a duplicate of this bug. ***
Comment 9 Niccolò Venerandi 2024-09-27 11:24:40 UTC
Can reproduce the bug even without a floating panel
Comment 10 Vlad Zahorodnii 2024-09-27 12:09:45 UTC
Git commit c4116173aa689bb9d1d5c59b248052b601866c32 by Vlad Zahorodnii.
Committed on 27/09/2024 at 12:09.
Pushed by vladz into branch 'master'.

effect: Make cancel() properly cancel cross-fade animation

Currently, when a cancel() is called for a cross-fade animation, the
window will not be unredirected.
Related: bug 486023

M  +4    -5    src/effect/animationeffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/c4116173aa689bb9d1d5c59b248052b601866c32
Comment 11 Vlad Zahorodnii 2024-09-27 12:45:49 UTC
Git commit ae4d171d2a024d8942642dbdf984fbe7e567fa8c by Vlad Zahorodnii.
Committed on 27/09/2024 at 12:45.
Pushed by vladz into branch 'Plasma/6.2'.

effect: Make cancel() properly cancel cross-fade animation

Currently, when a cancel() is called for a cross-fade animation, the
window will not be unredirected.
Related: bug 486023


(cherry picked from commit c4116173aa689bb9d1d5c59b248052b601866c32)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +4    -5    src/effect/animationeffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/ae4d171d2a024d8942642dbdf984fbe7e567fa8c