effect: Make cancel() properly cancel cross-fade animation

Currently, when a cancel() is called for a cross-fade animation, the
window will not be unredirected.

BUG: 488893
CCBUG: 486023